--- a/components/hosted-zone/template.yml
+++ b/components/hosted-zone/template.yml
@@ -85,4 +85,4 @@ Outputs:
   Two: { Value: !Ref StagNlbHostnameUSWEST2 }
   Three: { Value: !Ref ProdNlbHostnameUSEAST1 }
   Four: { Value: !Ref ProdNlbHostnameUSWEST2 }
-  Five: { Value: !Ref ProdHealthCheckIdsTargetingUSWEST2 }
+  Five: { Value: !Join ["", !Ref ProdHealthCheckIdsTargetingUSWEST2] }
