--- a/components/hosted-zone/template.yml
+++ b/components/hosted-zone/template.yml
@@ -19,7 +19,7 @@ Parameters:
 
 Conditions:
   CreateProdHealthCheckUSEAST1: !Not [!Equals [!Join ["", !Ref ProdHealthCheckIdsTargetingUSEAST1], ""]]
-  # CreateProdHealthCheckUSWEST2: !Not [!Equals [!Join ["", !Ref ProdHealthCheckIdsTargetingUSWEST2], ""]]
+  CreateProdHealthCheckUSWEST2: !Not [!Equals [!Join ["", !Ref ProdHealthCheckIdsTargetingUSWEST2], ""]]
 
 Resources:
   HostedZone:
@@ -80,9 +80,53 @@ Resources:
   #     Threshold: 1
   #     TreatMissingData: breaching
 
+  # This health check determines if the us-west-2 FTP server is included in
+  # the active DNS pool. If this health check in UNHEALTHY, the us-west-2
+  # server will be removed from active duty until the health check recovers.
+  ProdUsWest2HealthCheck:
+    Type: AWS::Route53::HealthCheck
+    Condition: CreateProdHealthCheckUSWEST2
+    Properties:
+      HealthCheckConfig:
+        ChildHealthChecks: !Ref ProdHealthCheckIdsTargetingUSWEST2
+        HealthThreshold: 1 # Should always be 1
+        Type: CALCULATED
+      HealthCheckTags:
+        - { Key: Name, Value: delivery_prod_us-west-2 }
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: Broadcast Delivery }
+  # This alarm does **not** have any influence over DNS records. It is used
+  # solely for visibility. When the health check becomes UNHEALTHY, the alarm
+  # will move into an ALARM state, which sends alerts/etc.
+  # ProdUsWest2HealthCheckAlarm:
+  #   Type: AWS::CloudWatch::Alarm
+  #   Condition: CreateProdHealthCheckUSWEST2
+  #   Properties:
+  #     AlarmName: !Sub FATAL [FTP] us-west-2 Server Connectivity <prod> UNHEALTHY (${AWS::StackName})
+  #     AlarmDescription: >-
+  #       All connection tests for prodoction us-west-2 FTP servers are failing.
+  #       This likely means there is a service issue with Transfer Family,
+  #       Lambda, or RDS in us-west-2.
+
+  #       By the time this alarm has been triggered, the region has already been
+  #       removed from the DNS pool.
+  #     ComparisonOperator: LessThanThreshold
+  #     Dimensions:
+  #       - Name: HealthCheckId
+  #         Value: !GetAtt ProdUsWest2HealthCheck.HealthCheckId
+  #     EvaluationPeriods: 1
+  #     MetricName: HealthCheckStatus
+  #     Namespace: AWS/Route53
+  #     Period: 60
+  #     Statistic: Minimum
+  #     Threshold: 1
+  #     TreatMissingData: breaching
+
 Outputs:
   One: { Value: !Ref StagNlbHostnameUSEAST1 }
   Two: { Value: !Ref StagNlbHostnameUSWEST2 }
   Three: { Value: !Ref ProdNlbHostnameUSEAST1 }
   Four: { Value: !Ref ProdNlbHostnameUSWEST2 }
-  Five: { Value: !Join ["", !Ref ProdHealthCheckIdsTargetingUSWEST2] }
