--- a/components/hosted-zone/template.yml
+++ b/components/hosted-zone/template.yml
@@ -297,29 +297,29 @@ Resources:
   # This alarm does **not** have any influence over DNS records. It is used
   # solely for visibility. When the health check becomes UNHEALTHY, the alarm
   # will move into an ALARM state, which sends alerts/etc.
-  # ProdUsEast1HealthCheckAlarm:
-  #   Type: AWS::CloudWatch::Alarm
-  #   Condition: CreateProdHealthCheckUSEAST1
-  #   Properties:
-  #     AlarmName: !Sub FATAL [FTP] us-east-1 Server Connectivity <prod> UNHEALTHY (${AWS::StackName})
-  #     AlarmDescription: >-
-  #       All connection tests for prodoction us-east-1 FTP servers are failing.
-  #       This likely means there is a service issue with Transfer Family,
-  #       Lambda, or RDS in us-east-1.
+  ProdUsEast1HealthCheckAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Condition: CreateProdHealthCheckUSEAST1
+    Properties:
+      AlarmName: !Sub FATAL [FTP] us-east-1 Server Connectivity <prod> UNHEALTHY (${AWS::StackName})
+      AlarmDescription: >-
+        All connection tests for production us-east-1 FTP servers are failing.
+        This likely means there is a service issue with Transfer Family,
+        Lambda, or RDS in us-east-1.
 
-  #       By the time this alarm has been triggered, the region has already been
-  #       removed from the DNS pool.
-  #     ComparisonOperator: LessThanThreshold
-  #     Dimensions:
-  #       - Name: HealthCheckId
-  #         Value: !GetAtt ProdUsEast1HealthCheck.HealthCheckId
-  #     EvaluationPeriods: 1
-  #     MetricName: HealthCheckStatus
-  #     Namespace: AWS/Route53
-  #     Period: 60
-  #     Statistic: Minimum
-  #     Threshold: 1
-  #     TreatMissingData: breaching
+        By the time this alarm has been triggered, the region has already been
+        removed from the DNS pool.
+      ComparisonOperator: LessThanThreshold
+      Dimensions:
+        - Name: HealthCheckId
+          Value: !GetAtt ProdUsEast1HealthCheck.HealthCheckId
+      EvaluationPeriods: 1
+      MetricName: HealthCheckStatus
+      Namespace: AWS/Route53
+      Period: 60
+      Statistic: Minimum
+      Threshold: 1
+      TreatMissingData: breaching
 
   # This health check determines if the us-west-2 FTP server is included in
   # the active DNS pool. If this health check in UNHEALTHY, the us-west-2
@@ -342,26 +342,26 @@ Resources:
   # This alarm does **not** have any influence over DNS records. It is used
   # solely for visibility. When the health check becomes UNHEALTHY, the alarm
   # will move into an ALARM state, which sends alerts/etc.
-  # ProdUsWest2HealthCheckAlarm:
-  #   Type: AWS::CloudWatch::Alarm
-  #   Condition: CreateProdHealthCheckUSWEST2
-  #   Properties:
-  #     AlarmName: !Sub FATAL [FTP] us-west-2 Server Connectivity <prod> UNHEALTHY (${AWS::StackName})
-  #     AlarmDescription: >-
-  #       All connection tests for prodoction us-west-2 FTP servers are failing.
-  #       This likely means there is a service issue with Transfer Family,
-  #       Lambda, or RDS in us-west-2.
+  ProdUsWest2HealthCheckAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Condition: CreateProdHealthCheckUSWEST2
+    Properties:
+      AlarmName: !Sub FATAL [FTP] us-west-2 Server Connectivity <prod> UNHEALTHY (${AWS::StackName})
+      AlarmDescription: >-
+        All connection tests for production us-west-2 FTP servers are failing.
+        This likely means there is a service issue with Transfer Family,
+        Lambda, or RDS in us-west-2.
 
-  #       By the time this alarm has been triggered, the region has already been
-  #       removed from the DNS pool.
-  #     ComparisonOperator: LessThanThreshold
-  #     Dimensions:
-  #       - Name: HealthCheckId
-  #         Value: !GetAtt ProdUsWest2HealthCheck.HealthCheckId
-  #     EvaluationPeriods: 1
-  #     MetricName: HealthCheckStatus
-  #     Namespace: AWS/Route53
-  #     Period: 60
-  #     Statistic: Minimum
-  #     Threshold: 1
-  #     TreatMissingData: breaching
+        By the time this alarm has been triggered, the region has already been
+        removed from the DNS pool.
+      ComparisonOperator: LessThanThreshold
+      Dimensions:
+        - Name: HealthCheckId
+          Value: !GetAtt ProdUsWest2HealthCheck.HealthCheckId
+      EvaluationPeriods: 1
+      MetricName: HealthCheckStatus
+      Namespace: AWS/Route53
+      Period: 60
+      Statistic: Minimum
+      Threshold: 1
+      TreatMissingData: breaching
